src/scss/modules/content.scss
@import "./blocks/introduction-block.scss";
@import "./blocks/gallery-block.scss";
@import "./blocks/about-block.scss";
@import "./blocks/lays-block.scss";

.content-overflow-layout {
  position: relative;
  top: 80px;
  left: 0;
  right: 0;
  height: auto;

  @media (max-width: 1024px) and (min-width: 681px) {
    position: absolute;
    top: 0;
    left: 110px;
    right: 0;
    height: auto;
  }

  @media (max-width: 1400px) and (min-width: 1025px) {
    position: absolute;
    top: 0;
    left: 150px;
    right: 0;
    height: auto;
  }

  @media (max-width: 1560px) and (min-width: 1401px) {
    position: absolute;
    top: 0;
    left: 150px;
    right: 0;
    height: auto;
  }

  @media (min-width: 1561px) {
    position: absolute;
    top: 0;
    left: 150px;
    right: 0;
    height: auto;
  }
}

.content-layout {
  position: relative;
  width: 100%;
  height: 100%;
}

.index-page {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background: $secondaryPageBackground;
  z-index: 2;
}

.page-content-overflow {
  position: relative;
  width: 100%;
  min-height: calc(100vh - 80px);
  overflow: hidden;
}

.page-content {
  position: relative;
  width: 100%;
  overflow: hidden;
  // padding-bottom: 42px;

  @media (min-width: 1025px) {
    animation: pageOpacity 1s ease;

    @keyframes pageOpacity {
      0% {
        opacity: 0;
      }

      100% {
        opacity: 1;
      }
    }
  }
}

